--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
 
 
   <link rel="stylesheet" href="css/heart.css" />
+   <script type="text/javascript" src="cordova.js"></script>
 
 <script type="text/javascript">
 	//handle Back button
@@ -55,6 +56,7 @@ function onBackKeyDown() {
 
        <div data-role="page"  id="pageone" class="main-bg">
 <script type="text/javascript" src="js/condition.js"></script>
+ <script type="text/javascript" src="cordova.js"></script>
 			<nd2-include data-src=".//examples/fragments/panel.left.html"></nd2-include>
 
 			<div data-role="panel" id="bottomsheet" data-animate="false" data-position='bottom' data-display="overlay">
